# classwork-ug-sem-1-clang

./: re.f
c/: CMakeLists.txt  game1.cpp  multiply.c  palidrome.c  program to check the no is even or odd.c  program to print the ASCII value of character.cpp  string.c  to count length of string.c  to print tnatural no using function and t o print random prime no and to print fabbinci series using functiom .c
c/.github/: copilot-instructions.md
