cmake_minimum_required(VERSION 4.0)
project(c C)

set(CMAKE_C_STANDARD 11)

add_executable(c main.c
        "c and gen ai.c"
        "area of square and circle.c"
        "weightage of c and gen ai marks.c"
        "program for prefixed and postfixed values.c"
        "program to check the no is even or odd.c"
        "to check that the person is eligible for voting.c"
        "program to check the no is positive no is negative or zero.c"
        "check the valuse of day.c"
        "program to print the ASCII value of character.cpp"
        "program  to take a integer value and convert it into a float.c"
        "convert float into int.c"
        "to check the given the character is vowel.c"
        " a program to  check your indian if yes then check the age  if age is greater  than 18  then your are eligble for for vote.c"
        "the no is even or odd also check no is positive or negative.c"
        "program to calculate the  employee total salary.c"
        "no of digits.c"
        "the no is positive negative zero without else if .c"
        "to select the day of the week.c"
        "to print the colour name against the  first letter entered by user using switch case.c"
        "to print hello 100 time.c"
        "to print 1 to 10.c"
        "to print the sum first n natural no.c"
        "to print the factorial of given no.c"
        "cmake-build-debug/paidrone no.c"
        palidrome.c
        armstrong.c
        "pattern star.c"
        "write the progaram to print ther no in  reverse .c"
        "do while.c"
        "to swap two no .c"
        "to print tnatural no using function and t o print random prime no and to print fabbinci series using functiom .c"
        "swap by call by reference and call by value.c"
        sat.c
        "prime no .c"
        pattern.c
        "three no  grweatest.c"
        "to change +ve to negative viceversa.c"
        "swaping the no .c"
        game.c
        game1.cpp
        array.c
        "wap to enter a array element and display.c"
        "to remove.c"
        "wap to count total and odd no value in array.c"
)
